components/generic-toc/server.css
.generic-toc {
  --color-accent: var(--color-blue-50);
  --color-background-accent: var(--color-background-blue);

  .generic-toc__header {
    padding: 0.75em 0;
    margin: 0;

    font-size: var(--font-size-large);
    font-weight: var(--font-weight-normal);

    line-height: 1.2;

    letter-spacing: 1.5px;
  }

  .generic-toc__list {
    padding: 0;
    margin: 0;
    list-style: none;
  }

  .generic-toc__item {
    margin: 0;
  }

  .generic-toc__link {
    display: inline-block;

    padding: 0.25em 0.5em;

    color: inherit;

    box-shadow: -2px 0 0 var(--color-border-primary);

    &:not(:hover) {
      text-decoration: none;
    }

    &:hover:not([aria-current="true"]) {
      color: var(--color-link-normal);
    }

    &[aria-current="true"] {
      background-color: var(--color-background-accent);
      box-shadow: -2px 0 0 var(--color-accent);
    }
  }

  em {
    align-items: baseline;

    padding: 0.25em 0;

    font-style: normal;

    background-color: var(--color-background-accent);
    border-left: 2px solid var(--color-accent);
  }
}

.generic-toc--plus {
  --color-accent: var(--color-text-red);
  --color-background-accent: var(--color-background-red);
}

.generic-toc--observatory {
  --color-accent: var(--color-text-purple);
  --color-background-accent: var(--color-background-purple);
}

